--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,15 +32,21 @@ jobs:
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build wheel setuptools setuptools-scm
+        pip install build wheel setuptools>=65 setuptools-scm
+        # Install all build requirements for no-isolation build
+        pip install -r requirements.txt || true
     
     - name: Build distribution packages
       run: |
-        # Clean any existing build artifacts
+        # Clean any existing build artifacts and caches
         rm -rf build/ dist/ *.egg-info src/*.egg-info
         find . -type d -name "*.egg-info" -exec rm -rf {} + || true
-        # Build fresh packages
-        python -m build
+        find . -type d -name "__pycache__" -exec rm -rf {} + || true
+        rm -rf ~/.cache/pip
+        # Ensure clean pyproject.toml processing
+        python -m pip cache purge
+        # Build fresh packages with no build isolation to ensure clean metadata
+        python -m build --no-isolation
         ls -la dist/
     
     - name: Check distribution packages
