fix: Remove duplicate metadata to fix automated PyPI deployment (v2.0.7)
- Simplified setup.py to minimal configuration since all metadata is in pyproject.toml
- Removed bdist_wheel and egg_info sections from setup.cfg
- Updated all missing dependencies in pyproject.toml
- Added alternative entry point 'spotifyscraper'
- Added async optional dependencies
- Configured package data and include settings
- Updated setuptools requirement to >=77.0.0 for proper PEP 621 support
- This should resolve the 'unrecognized or malformed field license-file' error

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build wheel setuptools>=65 setuptools-scm
+        pip install build wheel "setuptools>=77.0.0" setuptools-scm
         # Install all build requirements for no-isolation build
         pip install -r requirements.txt || true
     
