--- a/setup.cfg
+++ b/setup.cfg
@@ -1,53 +1,4 @@
-[metadata]
-name = spotifyscraper
-description = Spotify Web Player Scraper using Python - extract data and download content from Spotify
-author = Ali Akhtari
-author_email = aliakhtari78@hotmail.com
-license = MIT
-long_description = file: README.md
-long_description_content_type = text/markdown
-url = https://github.com/AliAkhtari78/SpotifyScraper
-project_urls =
-    Bug Tracker = https://github.com/AliAkhtari78/SpotifyScraper/issues
-    Documentation = https://spotifyscraper.readthedocs.io/
-classifiers =
-    Development Status :: 5 - Production/Stable
-    Intended Audience :: Developers
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
-    Programming Language :: Python :: 3.11
-    Topic :: Software Development :: Libraries :: Python Modules
-
-[options]
-package_dir =
-    = src
-packages = find:
-python_requires = >=3.8
-install_requires =
-    requests>=2.25.0
-    beautifulsoup4>=4.9.0
-    lxml>=4.9.0
-    pyyaml>=6.0
-    eyeD3>=0.9.5
-
-[options.packages.find]
-where = src
-
-[options.extras_require]
-selenium =
-    selenium>=4.0.0
-dev =
-    pytest>=7.0.0
-    pytest-cov>=4.0.0
-    black>=23.0.0
-    isort>=5.0.0
-    mypy>=1.0.0
-    pylint>=2.0.0
-docs =
-    sphinx>=5.0.0
-    sphinx-rtd-theme>=1.0.0
+# All metadata has been moved to pyproject.toml
 
 [flake8]
 max-line-length = 100
@@ -91,9 +42,3 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-[bdist_wheel]
-universal = 1
-
-[egg_info]
-tag_build = 
-tag_date = 0
