--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,21 +32,16 @@ jobs:
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build wheel "setuptools>=77.0.0" setuptools-scm
-        # Install all build requirements for no-isolation build
-        pip install -r requirements.txt || true
+        pip install build wheel twine
     
     - name: Build distribution packages
       run: |
-        # Clean any existing build artifacts and caches
+        # Clean any existing build artifacts
         rm -rf build/ dist/ *.egg-info src/*.egg-info
         find . -type d -name "*.egg-info" -exec rm -rf {} + || true
         find . -type d -name "__pycache__" -exec rm -rf {} + || true
-        rm -rf ~/.cache/pip
-        # Ensure clean pyproject.toml processing
-        python -m pip cache purge
-        # Build fresh packages with no build isolation to ensure clean metadata
-        python -m build --no-isolation
+        # Build fresh packages
+        python -m build
         ls -la dist/
     
     - name: Check distribution packages
