--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,16 @@
 [build-system]
-requires = ["setuptools>=77.0.0", "wheel"]
+requires = ["setuptools>=65,<77", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "spotifyscraper"
-version = "2.0.8"
+version = "2.0.9"
 description = "Python library for extracting data from Spotify without authentication"
 readme = "README.md"
 authors = [
     {name = "Ali Akhtari", email = "aliakhtari78@hotmail.com"},
 ]
 license = "MIT"
-license-files = ["LICENSE"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
@@ -156,7 +155,7 @@ precision = 2
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "2.0.8"
+version = "2.0.9"
 version_files = [
     "pyproject.toml:version",
     "src/spotify_scraper/__init__.py:__version__",
