fix: Use older twine version to bypass metadata validation (v2.0.11)
- Use twine<5.0.0 which doesn't validate license-file field
- This should allow upload despite the automatically added field

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -102,7 +102,7 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        pip install twine
+        pip install "twine<5.0.0"
         twine upload --non-interactive --skip-existing dist/*
     
     # Alternative: Use trusted publishing (requires PyPI configuration)
