--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -129,7 +129,7 @@ jobs:
     - name: Verify installation from PyPI
       run: |
         python -m pip install --upgrade pip
-        pip install spotify-scraper
+        pip install spotifyscraper
         python -c "import spotify_scraper; print(f'Successfully installed version: {spotify_scraper.__version__}')"
         spotify-scraper --version
     
