fix: Add missing fields and async configuration
- Add is_playable field extraction to track parser
- Add support for 'date' field format in album release_date extraction
- Configure asyncio_default_fixture_loop_scope in pytest.ini to fix deprecation warning
- Improve JSON parser to handle multiple date field formats (releaseDate, release_date, date)

--- a/pytest.ini
+++ b/pytest.ini
@@ -45,4 +45,7 @@ log_cli_date_format = %Y-%m-%d %H:%M:%S
 timeout = 300
 
 # Plugins
-required_plugins = pytest-cov>=4.0 pytest-timeout>=2.0 pytest-xdist>=3.0
+required_plugins = pytest-cov>=4.0 pytest-timeout>=2.0 pytest-xdist>=3
+
+# Async configuration
+asyncio_default_fixture_loop_scope = function.0
