--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Test installation from TestPyPI
       run: |
         python -m pip install --upgrade pip
-        pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ spotify-scraper
+        pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ spotifyscraper
         python -c "import spotify_scraper; print(f'Installed version: {spotify_scraper.__version__}')"
 
   publish:
@@ -131,7 +131,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install spotifyscraper
         python -c "import spotify_scraper; print(f'Successfully installed version: {spotify_scraper.__version__}')"
-        spotify-scraper --version
+        spotifyscraper --version
     
     - name: Create GitHub Release Assets
       if: github.event_name == 'release'
