--- a/pytest.ini
+++ b/pytest.ini
@@ -48,4 +48,4 @@ timeout = 300
 required_plugins = pytest-cov>=4.0 pytest-timeout>=2.0 pytest-xdist>=3
 
 # Async configuration
-asyncio_default_fixture_loop_scope = function.0
+asyncio_default_fixture_loop_scope = function
