fix: Add deployment cleanup workflow and fix test-pypi permissions
- Add cleanup-deployments.yml to automatically clean old/failed deployments
- Fix test-pypi job permissions to allow deployment writes
- Helps keep deployment dashboard clean and green
- Runs weekly and can be triggered manually

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,6 +62,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.test_pypi == 'true'
     environment: test-pypi
+    permissions:
+      id-token: write
+      deployments: write
     
     steps:
     - name: Download packages
