--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ dev = [
     "pytest-timeout>=2.2.0",
     "pytest-mock>=3.12.0",
     "pytest-asyncio>=0.23.0",
+    "vcrpy>=5.0.0",
     "black>=24.2.0",
     "isort>=5.13.0",
     "flake8>=7.0.0",
@@ -84,6 +85,7 @@ test = [
     "pytest-timeout>=2.2.0",
     "pytest-mock>=3.12.0",
     "pytest-asyncio>=0.23.0",
+    "vcrpy>=5.0.0",
 ]
 docs = [
     "sphinx>=7.2.0",
