--- a/.pylintrc
+++ b/.pylintrc
@@ -8,6 +8,7 @@ disable=
     too-many-branches,
     too-many-statements,
     too-many-public-methods,
+    too-many-lines,
     broad-exception-caught,
     import-outside-toplevel,
     no-else-return,
