--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,7 @@
 # Documentation dependencies
 mkdocs>=1.5.0
+mkdocs-material>=9.5.0
+mkdocs-minify-plugin>=0.7.0
 markdown>=3.3
 pygments>=2.10
+pymdown-extensions>=10.0
