Switch to GitBook theme for clean documentation appearance
- Replace Material theme with GitBook theme
- Simplify markdown extensions for GitBook compatibility
- Update documentation requirements for GitBook theme
- Configure clean navigation with GitBook styling

GitBook theme provides a clean, familiar interface similar
to GitBook.io with excellent readability and navigation.

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,5 @@
 # Documentation dependencies
 mkdocs>=1.5.0
-mkdocs-material>=9.5.0
-mkdocs-minify-plugin>=0.7.0
+mkdocs-gitbook-theme>=0.0.1
 markdown>=3.3
 pygments>=2.10
-pymdown-extensions>=10.0
