Fix documentation build by using windmill theme
- Replace non-existent gitbook theme with windmill theme
- Windmill provides a clean GitBook-like interface
- Fix package dependencies to use available theme
- Configure windmill theme for optimal navigation

This resolves the build failure and provides a clean,
professional documentation appearance.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ repo_name: AliAkhtari78/SpotifyScraper
 copyright: Copyright &copy; 2025 Ali Akhtari - Documentation Last Updated May 2025
 
 theme:
-  name: gitbook
+  name: windmill
   highlightjs: true
   hljs_languages:
     - python
@@ -16,6 +16,9 @@ theme:
     - json
     - xml
   navigation_depth: 3
+  sticky_navigation: true
+  collapse_navigation: false
+  include_search_page: true
 
 nav:
   - Home: index.md
