Switch to mkdocs-simple-blog theme for modern documentation
- Replace windmill theme with mkdocs-simple-blog
- Configure simple-blog theme with clean navigation
- Add blog-specific configuration options
- Update social links format for simple-blog compatibility
- Add python-markdown-math for enhanced formatting

The simple-blog theme provides a modern, clean interface
with excellent readability and navigation features.

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
 # Documentation dependencies
 mkdocs>=1.5.0
-mkdocs-windmill>=1.0.5
+mkdocs-simple-blog>=0.0.1
 markdown>=3.3
 pygments>=2.10
+python-markdown-math>=0.8
