--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 # Documentation dependencies
 mkdocs>=1.5.0
-mkdocs-simple-blog>=0.0.1
+mkdocs-material>=9.5.0
 markdown>=3.3
 pygments>=2.10
-python-markdown-math>=0.8
+pymdown-extensions>=10.0
