Add podcast support for episodes and shows (#69)
- Implement EpisodeExtractor and ShowExtractor classes
- Add get_episode_info() and get_show_info() methods to SpotifyClient
- Add download_episode_preview() for downloading episode preview clips
- Update URL utilities to support podcast URLs (episode/show)
- Add CLI commands for episode and show operations
- Add comprehensive TypedDict classes for EpisodeData and ShowData
- Update documentation to include podcast examples
- Add unit tests for podcast functionality
- Bump version to 2.1.0

Podcast previews are available without authentication, while full episodes require Premium account with valid cookies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "spotifyscraper"
-version = "2.0.22"
+version = "2.1.0"
 description = "Python library for extracting data from Spotify without authentication"
 readme = "README.md"
 authors = [
@@ -24,7 +24,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Multimedia :: Sound/Audio",
 ]
-keywords = ["spotify", "scraper", "music", "api", "download"]
+keywords = ["spotify", "scraper", "music", "api", "download", "podcast", "episode", "show"]
 dependencies = [
     "requests>=2.25.0",
     "beautifulsoup4>=4.9.0",
