--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,24 @@ requires-python = ">=3.8"
 
 [project.urls]
 Homepage = "https://github.com/AliAkhtari78/SpotifyScraper"
+
+[tool.black]
+line-length = 100
+target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
 Documentation = "https://spotifyscraper.readthedocs.io/"
 Repository = "https://github.com/AliAkhtari78/SpotifyScraper.git"
 "Bug Tracker" = "https://github.com/AliAkhtari78/SpotifyScraper/issues"
